# qimhangul

./: .cvsignore  .hangulcomposer.cpp.swp  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  bootstrap  candidatelist.cpp  candidatelist.h  configure.ac  hangul.c  hangul.h  hangulcomposer.cpp  hangulcomposer.h  hangulinputcontext.c  hangulkeyboard.h  keyboard.h  qimhangul.json  qimhangul.pro  qinputcontexthangul.cpp  qinputcontexthangul.h  qinputcontexthangul_dummy.cpp  qinputcontexthangul_x11.cpp  qinputcontextpluginhangul.cpp  qinputcontextpluginhangul.h
qimhangul/: .qinputcontexthangul.cpp.swp  ChangeLog  candidatelist.cpp  candidatelist.h  hangul.h  hangulcomposer.cpp  hangulcomposer.h  keyboard.h  qimhangul.pro  qinputcontexthangul.cpp  qinputcontexthangul.h  qinputcontextpluginhangul.cpp  qinputcontextpluginhangul.h
